# tabuli

hardware/piccolo_v2/: reconfig.sh  upload_device.sh
hardware/piccolo_v2/uac2/: CMakeLists.txt  uac2.c  usb_descriptors.h
